--- a/_talks/colt2025.md
+++ b/_talks/colt2025.md
@@ -1,7 +1,7 @@
 ---
 title: "COLT 2025"
 collection: talks
-type: "Tutorial"
+type: "talk"
 permalink: /talks/colt2025
 venue: "ENS Lyon"
 date: 2025-07-28
