--- a/_talks/jds2025.md
+++ b/_talks/jds2025.md
@@ -3,7 +3,7 @@ title: "Journée de Statistique 2025"
 collection: talks
 type: "Talk"
 permalink: /talks/jds2025
-venue: "Université Aix-Marseille, Campus Saint-Charles"
+venue: "Université Aix-Marseille"
 date: 2025-07-03
 location: "Marseille, France"
 ---
