--- a/_talks/colt2025.md
+++ b/_talks/colt2025.md
@@ -7,3 +7,6 @@ venue: "ENS Lyon"
 date: 2025-07-28
 location: "Lyon, France"
 ---
+[Slides](https://github.com/pojoowu/pojoowu.github.io/blob/master/files/_COLT_Slides__Take_a_big_step__memorization_prevention_presentation.pdf)
+
+Oral presentation of the work "Taking a Big Step: Large Learning Rates in Denoising Score Matching Prevents Memorization".
