--- a/_talks/jds2025.md
+++ b/_talks/jds2025.md
@@ -7,3 +7,6 @@ venue: "Université Aix-Marseille"
 date: 2025-07-03
 location: "Marseille, France"
 ---
+[Slides](https://github.com/pojoowu/pojoowu.github.io/blob/master/files/_COLT_Slides__Take_a_big_step__memorization_prevention_presentation.pdf)
+
+Oral Presentation of the work "Taking a Big Step: Large Learning Rates in Denoising Score Matching Prevents Memorization".
